<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">COMUBA TONDi</string>
    <string name="tontine_digi">Tontine digitale</string>
    <string name="welcome_message">Bienvenue sur </string>
    <string name="slogan">la plateforme sécurisée de tontine digitale</string>
    <string name="cgu">Termes &amp; Conditions générales d\'utilisation</string>
    <string name="seconnecter">Se connecter</string>
    <string name="sinscrire">S\'inscrire</string>
    <string name="inscrivez_v">Inscrivez-vous!</string>
    <string name="connectez_v">Connectez-vous!</string>
    <string name="form_fill">Renseigner..</string>
    <string name="compte_deja">Avez-vous déjà un compte?</string>
    <string name="pas_compte">Vous n\'avez pas de compte?</string>
    <string name="lorem">Les termes et conditions d\'utilisation de tondi…</string>
    <string name="fermer_cgu">Fermer CGU</string>
    <string name="n_inscription">INSCRIPTION</string>
    <string name="n_connexion">CONNEXION</string>
    <string name="acceter_cgu">Accepter nos termes &amp; conditions</string>
    <string name="dashboard">Accueil</string>
    <string name="solde">Solde : </string>
    <string name="deconnexion">Sortir</string>
    <string name="n_tontine">Nouvelle Tontine</string>
    <string name="m_tontines">Mes Tontines</string>
    <string name="m_versements">Historique cotisations</string>
    <string name="m_compte">Mon Compte &amp; Sécurités</string>
    <string name="enreg_tontine">Enregistrer</string>
    <string name="cfg_moncompte">Compte</string>
    <string name="cfg_secutites">Sécurités</string>
    <string name="cfg_paiement">Paiement</string>
    <string name="cni_ravip">CNI / RAVIP</string>
    <string name="s_lectionner">Sélectionner</string>
    <string name="ajouter">Ajouter</string>
    <string name="continuer">Continuer</string>
    <string name="nouveau_versement">Versement manuel</string>
    <string name="valider">Valider</string>
    <string name="retrait_sur_mon_compte_mobilemoney">Retrait sur mon compte MobileMoney</string>
    <string name="retrait_en_esp_ces">Retrait en espèces</string>
    <string name="refuse_permissions">Veuillez autoriser la permission d\'effectuer les appels USSD pour les paiements déconnecté de l\'internet.</string>
    <string name="accessibility_service_description">Activer la permission puis retourner dans votre application Tondi pour finaliser votre versement.</string>
    <string name="crop__saving">Enregistrement de l\'image…</string>
    <string name="crop__wait">Veuillez patienter…</string>
    <string name="crop__pick_error">Aucune image disponible</string>
    <string name="crop__done">ACCEPTER</string>
    <string name="crop__cancel" tools:ignore="ButtonCase">ANNULER</string>
    <string name="les_cgu"><u>les CGU</u></string>
    <string name="choisissez_l_option_de_retrait_retrait_sur_mon_compte_mobilemoney_et_tapez_le_bouton_continuer">Choisissez l\'option de retrait <u>Retrait sur mon compte MobileMoney</u> et tapez le bouton <u>Continuer</u></string>
    <string name="choisissez_l_option_de_retrait_retrait_sur_mon_compte_mobilemoney_et_tapez_le_bouton_continuer_B">Choisissez l\'option de retrait <u>Retrait en espèces</u> et tapez le bouton <u>Continuer</u></string>
    <string name="intitul_mes_retraits">Si la tontine que vous désirez retirer est en cours, veuillez l\'arrêter puis déplacez vous à l\'accueil pour sélectionner le menu intitulé <u>Mes Retraits</u> </string>
    <string name="tapez_le_bouton_encaisser">Après avoir vérifié votre code PIN, dans la fenêtre qui s\'ouvre, vous verrez la liste de vos tontines terminées. Sélectionner la tontine puis tapez le bouton <u>Encaisser</u></string>
    <string name="ifNoHistoryMsg">Aucune activitée récente.</string>
    <string name="ifNoTontinMsg">Aucune tontine</string>
    <string-array name="mtn_prefix_list">
        <item>97</item>
        <item>96</item>
        <item>91</item>
        <item>90</item>
        <item>69</item>
        <item>67</item>
        <item>66</item>
        <item>62</item>
        <item>61</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
    </string-array>
    <string-array name="moov_prefix_list">
        <item>99</item>
        <item>98</item>
        <item>95</item>
        <item>94</item>
        <item>68</item>
        <item>65</item>
        <item>64</item>
        <item>60</item>
        <item>63</item>
        <item>55</item>
    </string-array>
    <string name="title_activity_mes_plaintes">MesPlaintes</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="m_plaintes">Mes plaintes</string>
    <string name="alerte_desac_temp">Votre compte est temporairement désactivé. Contacter le XXXXXXXX</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="msg_token_fmt">Obtention du token</string>
    <string name="msg_subscribed">Souscription a la rubrique firebase ok!</string>
    <string name="msg_subscribe_failed">Echec inscription a la rubrique</string>
    <string name="Powered_by">Powered by</string>
    <string name="about">A propos</string>
    <string name="about_us_text">Qui sommes-nous?</string>
    <string name="qui_som_nous_"> SICMa &amp; Associés est apporteur de la solution de tontine digitale TonDi. Elle propose des solutions numérique intervenant dans le domaine des finances pour le compte d\'IMFs prêt a enclenché leur entré dans le numérique.</string>
    <string name="version">Version &amp; Compatibilité de l\'application</string>
    <string name="version_value">Version 1.0.0</string>
    <string name="android_compatibility">Compatible à partir de android 4.4 kitkat</string>
    <string name="share_text">Partager cette application</string>
    <string name="copyright">- copyright 2021</string>
    <string name="title_home">Accueil</string>
    <string name="title_retraits">Retraits</string>
    <string name="title_tontines">Tontines</string>
    <string name="title_avances">Avances</string>
    <string name="title_plaintes">Plaintes</string>
</resources>