<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:minHeight="200dp"
    android:background="#ffffffff">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/a"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="Sélectionner une option de retrait"
        android:background="@drawable/gradient_color"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:orientation="vertical">
        <RadioGroup
            android:id="@+id/radio_retrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioMale"
                android:tag="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retrait_sur_mon_compte_mobilemoney"
                android:checked="true" />

            <RadioButton
                android:tag="2"
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retrait_en_esp_ces" />

        </RadioGroup>

    </LinearLayout>
    <com.sicmagroup.tondi.FButton
        android:layout_marginRight="16dp"
        android:id="@+id/btn_continue_retrait"
        fbutton:buttonColor="@color/colorPrimaryDark"
        fbutton:shadowColor="@color/fbutton_color_asbestos"
        android:layout_marginTop="20dp"
        fbutton:shadowEnabled="false"
        fbutton:shadowHeight="4dp"
        fbutton:cornerRadius="20dp"
        android:layout_height="35dp"
        android:layout_width="100dp"
        android:textColor="@color/colorWhite"
        android:text="@string/continuer"
        android:layout_gravity="right"
        android:layout_marginBottom="20dp"
        android:textAllCaps="false"/>

</LinearLayout>